[gd_scene load_steps=17 format=3 uid="uid://terj6xg2k3ow"]

[ext_resource type="Script" path="res://enemies/flying_enemy.gd" id="1_5ohwr"]
[ext_resource type="Texture2D" uid="uid://djb34efcw30xn" path="res://enemies/flying_enemy.png" id="1_iu1kl"]
[ext_resource type="PackedScene" uid="uid://fh5bt4j74uhr" path="res://Collisions/hurt_box.tscn" id="3_bux00"]
[ext_resource type="PackedScene" uid="uid://cufv2er0s4ngx" path="res://Collisions/hit_box.tscn" id="4_e4n1x"]
[ext_resource type="PackedScene" uid="uid://bf7coyeg75jx1" path="res://stats.tscn" id="5_f0wa6"]
[ext_resource type="PackedScene" uid="uid://clmujfemugan8" path="res://enemies/waypoint_pathfinding.tscn" id="6_xxric"]

[sub_resource type="AtlasTexture" id="AtlasTexture_02o1o"]
atlas = ExtResource("1_iu1kl")
region = Rect2(0, 0, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_nk0dj"]
atlas = ExtResource("1_iu1kl")
region = Rect2(32, 0, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_r1l6q"]
atlas = ExtResource("1_iu1kl")
region = Rect2(64, 0, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_tanj8"]
atlas = ExtResource("1_iu1kl")
region = Rect2(96, 0, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8u85"]
atlas = ExtResource("1_iu1kl")
region = Rect2(128, 0, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7k3xy"]
atlas = ExtResource("1_iu1kl")
region = Rect2(160, 0, 32, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_21ek1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_02o1o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nk0dj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1l6q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tanj8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8u85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7k3xy")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_wedbm"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_kyhdn"]
radius = 7.07107

[sub_resource type="CircleShape2D" id="CircleShape2D_wlylg"]
radius = 5.0

[node name="FlyingEnemy" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 9
motion_mode = 1
script = ExtResource("1_5ohwr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_21ek1")
autoplay = "default"
frame = 3
frame_progress = 0.719846

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_wedbm")

[node name="HurtBox" parent="." instance=ExtResource("3_bux00")]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CircleShape2D_kyhdn")

[node name="HitBox" parent="." instance=ExtResource("4_e4n1x")]
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_wlylg")

[node name="Stats" parent="." instance=ExtResource("5_f0wa6")]

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(7.15256e-07, -1.19209e-07)
scale = Vector2(0.5, 0.5)

[node name="WaypointPathfinding" parent="." instance=ExtResource("6_xxric")]

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="no_health" from="Stats" to="." method="_on_stats_no_health"]
